# rapids-cmake

./: RAPIDS.cmake  README.md
docs/: api.rst  basics.rst
docs/command/: rapids_hip_init_architectures.rst  rapids_hip_init_runtime.rst  rapids_hip_patch_toolkit.rst  rapids_hip_set_architectures.rst  supported_hip_architectures_values.txt
example/: CMakeLists.txt
example-hip/: CMakeLists.txt
rapids-cmake/: rapids-cuda.cmake  rapids-hip.cmake  rapids-test-hip.cmake  rapids-test.cmake
rapids-cmake/cpm/: _init_hip_options.cmake  cuco.cmake  hipbench.cmake  hipco.cmake  hipcomp.cmake  libcudacxx.cmake  libhipcxx.cmake  nvcomp.cmake  rmm-rocm.cmake  rmm.cmake  rocthrust.cmake  thrust.cmake  versions.json
rapids-cmake/hip/: init_architectures.cmake  init_runtime.cmake  patch_toolkit.cmake  set_architectures.cmake
rapids-cmake/hip/detail/: detect_architectures.cmake  (+2 more)
rapids-cmake/test-hip/: add.cmake  generate_resource_spec.cmake  gpu_requirements.cmake  init.cmake  install_relocatable.cmake
testing/: CMakeLists.txt  README.md
testing/cpm/: CMakeLists.txt  cpm_cuco-libhipcxx-no-install-export.cmake  cpm_hipco-export.cmake  cpm_hipco-libhipcxx-no-install-export.cmake  cpm_hipco-simple.cmake  cpm_hipcomp-export.cmake  cpm_hipcomp-simple.cmake  cpm_libhipcxx-after_cpmfind.cmake  cpm_libhipcxx-export.cmake  cpm_libhipcxx-simple.cmake  cpm_rocthrust-export.cmake  cpm_rocthrust-simple.cmake
testing/export/: CMakeLists.txt
testing/export/write_language-multiple-nested-enables-hip/: CMakeLists.txt
testing/export/write_language-multiple-nested-enables-hip/A/: CMakeLists.txt  static.hip
testing/export/write_language-multiple-nested-enables-hip/A/B/: CMakeLists.txt  static.not_hip
testing/export/write_language-multiple-nested-enables-hip/A/B/D/: CMakeLists.txt  static.hip
testing/export/write_language-multiple-nested-enables-hip/A/C/: CMakeLists.txt
testing/export/write_language-nested-dirs-hip/: CMakeLists.txt  main.hip
testing/export/write_language-nested-dirs-hip/A/: CMakeLists.txt  static.hip
testing/export/write_language-nested-dirs-hip/A/B/: CMakeLists.txt  static.hip
testing/find/: find_package-version-explicit.cmake  find_package-version-none.cmake
testing/hip/: CMakeLists.txt  init_arch-all-via-env.cmake  init_arch-all.cmake  init_arch-existing-project-flags.cmake  init_arch-native-via-env.cmake  init_arch-native.cmake  init_arch-rapids-via-env.cmake  init_arch-rapids.cmake  init_arch-user-via-env.cmake  init_arch-user.cmake  init_runtime-existing.cmake  init_runtime-multiple.cmake  init_runtime-shared.cmake  init_runtime-static.cmake  patch_toolkit.cmake  rapids-hip.cmake  set_arch-all.cmake  set_arch-existing.cmake  set_arch-invalid-mode.cmake  set_arch-native.cmake  set_arch-rapids.cmake  validate-hip-native.cmake  validate-hip-rapids.cmake
testing/hip/init_arch-all-via-undef/: CMakeLists.txt
testing/hip/init_arch-native-via-empty-str/: CMakeLists.txt
testing/hip/patch_toolkit-nested/: CMakeLists.txt
testing/hip/patch_toolkit-nested/subdir/: CMakeLists.txt
testing/utils/fill_cache/: CMakeLists.txt
(+6 files in other folders)
